Fixed all modal dialogs with selector dropdowns that may overflow the dialog (#245)

--- a/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
@@ -1,11 +1,6 @@
 @image-cropping-selector-height: 26px;
 
 .html-area-modal-dialog.image-modal-dialog {
-
-  .modal-dialog-body {
-    overflow: visible;
-  }
-
   .hasSelectedItemPreview();
 
   .image-selector {
